[tool.poetry]
name = "password-rotator"
version = "0.1.0"
description = ""
authors = ["kvanzuijlen <8818390+kvanzuijlen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "password_rotator"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.0"
click = "^8.1.3"
ijson = "^3.2.0.post0"
pyotp = "^2.8.0"
xkcdpass = "^1.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
